--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,12 @@
 
     <properties>
         <java.version>1.8</java.version>
-    </properties>
+</properties>
+
+<properties>
+  <sonar.organization>testing11</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+</properties>
 
     <dependencies>
 
