--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,18 @@
     <description>Demo Application for hands-on training </description>
 
     <properties>
-        <java.version>1.8</java.version>
+	  <java.version>1.8</java.version>
+	 <sonar.projectKey>manijoshan_java-devops-sample-app-boot-camp</sonar.projectKey>
+  	<sonar.organization>sonarqubereport</sonar.organization>
+ 	 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+ 	 <sonar.login>8e1bab6b2d917962c6585027caeb9bfec64df21e</sonar.login>
 </properties>
 
 <!--<properties>
   <sonar.organization>testing11</sonar.organization>
   <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 </properties>-->
+
 
     <dependencies>
 
@@ -86,7 +91,12 @@
 				<directory>src/test/java/resources</directory>
 			</testResource>
 		</testResources>
-        <plugins>
+		<plugins>
+		<plugin>
+     		 <groupId>org.sonarsource.scanner.maven</groupId>
+    		  <artifactId>sonar-maven-plugin</artifactId>
+     		 <version>3.7.0.1746</version>
+    </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
