--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	  <java.version>1.8</java.version>
 	 <sonar.projectKey>manijoshan_java-devops-sample-app-boot-camp</sonar.projectKey>
   	<sonar.organization>sonarqubereport</sonar.organization>
- 	 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+ 	 <sonar.host.url>https://sonarcloud.io/projects</sonar.host.url>
  	 <sonar.login>8e1bab6b2d917962c6585027caeb9bfec64df21e</sonar.login>
 </properties>
 
